--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sharp": "^0.32.5",
     "slugify": "^1.4.6",
     "stripe": "^7.0.0",
+    "urix": "^0.1.0",
     "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   },
